# doris-vectorized

./: build.sh  run-be-ut.sh
be/src/vec/: CMakeLists.txt
be/src/vec/AggregateFunctions/: AggregateFunctionSimpleFactory.h  AggregateFunctionSum.cpp  AggregateFunctionSum.h  Helpers.h  IAggregateFunction.h  ans.sh
be/src/vec/Columns/: Collator.cpp  ColumnConst.cpp  ColumnConst.h  ColumnDecimal.cpp  ColumnDecimal.h  ColumnNothing.h  ColumnNullable.cpp  ColumnNullable.h  ColumnString.cpp  ColumnString.h  ColumnVector.cpp  ColumnVector.h  ColumnVectorHelper.h  ColumnsCommon.cpp  ColumnsCommon.h  ColumnsNumber.h  IColumn.cpp  IColumn.h  IColumnDummy.h  IColumnImpl.h
be/src/vec/Common/: Allocator.h  Arena.h  Exception.cpp  FieldVisitors.h  PODArray.cpp  PODArray.h  PODArray_fwd.h  SipHash.h  UInt128.h  assert_cast.h  intExp.h  memcmpSmall.h  typeid_cast.h
be/src/vec/Core/: AccurateComparison.h  Block.cpp  Block.h  BlockInfo.cpp  BlockInfo.h  ColumnWithTypeAndName.cpp  ColumnWithTypeAndName.h  ColumnsWithTypeAndName.h  DecimalComparison.h  Field.cpp  Field.h  NamesAndTypes.h  Types.h  callOnTypeIndex.h
be/src/vec/DataTypes/: DataTypeNothing.cpp  DataTypeNothing.h  DataTypeNullable.cpp  DataTypeNullable.h  DataTypeNumberBase.cpp  DataTypeNumberBase.h  DataTypeString.cpp  DataTypeString.h  DataTypeTuple.cpp  DataTypeTuple.h  DataTypesDecimal.cpp  DataTypesDecimal.h  DataTypesNumber.cpp  DataTypesNumber.h  IDataType.cpp  IDataType.h  NestedUtils.cpp  NestedUtils.h  NumberTraits.h
be/src/vec/Functions/: FunctionHelpers.cpp  FunctionHelpers.h  FunctionUnaryArithmetic.h  IFunction.cpp  IFunction.h  SimpleFunctionFactory.h  abs.cpp  abs.hpp  castTypeToEither.h
be/src/vec/aggregate_functions/: aggregate_function.h  aggregate_function_avg.cpp  aggregate_function_avg.h  aggregate_function_bitmap.cpp  aggregate_function_bitmap.h  aggregate_function_combinator.h  aggregate_function_count.cpp  aggregate_function_count.h  aggregate_function_distinct.cpp  aggregate_function_distinct.h  aggregate_function_hll_union_agg.cpp  aggregate_function_hll_union_agg.h  aggregate_function_min_max.cpp  aggregate_function_min_max.h  aggregate_function_nothing.h  aggregate_function_null.cpp  aggregate_function_null.h  aggregate_function_percentile_approx.cpp  aggregate_function_percentile_approx.h  aggregate_function_reader.cpp  aggregate_function_reader.h  aggregate_function_simple_factory.cpp  aggregate_function_simple_factory.h  aggregate_function_sum.cpp  aggregate_function_sum.h  aggregate_function_uniq.cpp  aggregate_function_uniq.h  aggregate_function_window.cpp  aggregate_function_window.h  factory_helpers.h  helpers.h  key_holder_helpers.h
be/src/vec/columns/: collator.cpp  collator.h  column.cpp  column.h  column_complex.cpp  column_complex.h  column_const.cpp  column_const.h  column_decimal.cpp  column_decimal.h  column_dummy.h  column_impl.h  column_nothing.h  column_nullable.cpp  column_nullable.h  column_set.h  column_string.cpp  column_string.h  column_vector.cpp  column_vector.h  column_vector_helper.h  columns_common.cpp  columns_common.h  columns_number.h  predicate_column.h
be/src/vec/common/: DateLUTImpl.h  DayNum.h  ErrorHandlers.h  JSON.h  LocalDate.h  LocalDateTime.h  StringRef.h  aggregation_common.h  allocator.h  allocator_fwd.h  arena.h  args_to_config.h  arithmetic_overflow.h  assert_cast.h  bit_cast.h  bit_helpers.h  columns_hashing.h  columns_hashing_impl.h  constexpr_helpers.h  cow.h  date_lut.h  date_lut_impl.h  day_num.h  demangle.cpp  demangle.h  error_codes.cpp  error_handlers.h  exception.cpp  exception.h  field_visitors.h  find_symbols.h  get_memory_amount.h  get_thread_number.h  int_exp.h  iostream_debug_helpers.h  itoa.h  json.h  local_date.h  local_date_time.h  logger_useful.h  (+26 more)
be/src/vec/core/: accurate_comparison.h  block.cpp  block.h  block_info.cpp  block_info.h  call_on_type_index.h  column_numbers.h  column_with_type_and_name.cpp  column_with_type_and_name.h  columns_with_type_and_name.h  decimal_comparison.h  defines.h  field.cpp  field.h  (+9 more)
(+441 files in other folders)
